# pqc-cortex-m0-benchmark

./: .gitignore  AUTHORS.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  REPRODUCE.md  memmap_custom.ld  requirements.txt
local_test/: CMakeLists.txt  README.md  bench_harness_local.h  bench_mldsa_local.c  bench_mlkem_local.c
local_test/compat/: crtdefs.h
results/: stack_mldsa.txt  stack_mlkem.txt
results/old_data/: environment.json  reproducibility_report.json  stack_mldsa.txt  stack_mlkem.csv  stack_mlkem.txt
results/old_data/local/: mldsa_local.csv  mlkem_local.csv
results/old_data/raw/: classical_pico.csv  classical_pico_full.txt  mlkem_pico_full.txt
results/old_data/raw_run1/: mldsa_pico.csv  mldsa_pico_full.txt  mlkem_pico.csv
results/old_data/raw_run2/: classical_pico.csv  mldsa_pico.csv  mlkem_pico.csv
results/raw/: README.md  classical_pico.csv  classical_pico_full.txt  mldsa_pico.csv  mldsa_pico_full.txt  mlkem_pico.csv  mlkem_pico_full.txt
scripts/: add_energy.py  capture_all.py  capture_stack.py  elf2uf2.py  parse_serial.py  reproduce.py  validate_data.py
src/: bench_classical.c  bench_harness.h  bench_mldsa.c  bench_mlkem.c  blink.c  mbedtls_config.h  randombytes_pico.c
